Initial commit for VibeCheck web app

--- a/vibecheck-web/.gitignore
+++ b/vibecheck-web/.gitignore
@@ -8,9 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.DS_Store
+.idea/
 dist
 dist-ssr
 *.local
+.env
+*.log
 
 # Editor directories and files
 .vscode/*
