--- a/vibecheck-web/package.json
+++ b/vibecheck-web/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
